@@ -1,3 +1,8 @@
+2005-05-09  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* Makefile.am: Use a temporary file to build chew.
+	* Makefile.in: Regenerated.
+
 2005-05-04  Nick Clifton  <nickc@redhat.com>
 
 	* chew.c: Update the address and phone number of the FSF
